# md_cli

./: Cargo.toml  README.md
docs/: commands.md  database.md  tui.md
migrations/2021-04-21-114102_init/: down.sql  up.sql
src/: commands.rs  interpreter.rs  main.rs  schema.rs
src/db/: mod.rs
src/db/models/: folder.rs  mod.rs  note.rs
src/termui/: mod.rs  views.rs
